# libevdevPlus

./: .gitlab-ci.yml  CMakeLists.txt  CommonIncludes.hpp  InputEvent.hpp  LICENSE  README.md  Resource.cpp  evdevPlus.cpp  evdevPlus.hpp  evdevPlus.pc.in  libevdevPlus.spec  test.cpp
